Use Java 21 virtual threads for bridge I/O threads
Replace 3 daemon thread creation sites in BridgeClient.java with
Thread.ofVirtual().name(...).start(...). Virtual threads are always
daemon-like, so the setDaemon(true) calls are no longer needed.

Sites changed: MCP-Server, MCP-Stdin-Watcher, Potato-Ping.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>